# otus_cpp_prof_hw8

./: README.md
.github/workflows/: cmake-multi-platform.yml
source/: CMakeLists.txt  arguments.cpp  arguments.h  dfinder.cpp  dfinder.h  main.cpp
source/exclude/: test5.h
